--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <html>
 
 <head>
-    <title>GeeksforGeeks ChatRoom</title>
+    <title>ChatRoom</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1 class="logo">GeeksforGeeks ChatRoom</h1>
+        <h1 class="logo">ChatRoom</h1>
         <form class="form" id="form">
             <input class="input" type="text" placeholder="Name" id="myname">
             <input class="input" type="text" placeholder="Message" id="message">
